tests/syntax_error/bad_union_member_name.jou
union Foo:
    1: int  # Error: expected a union member, got an integer
